--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width,initial-scale=1'>
+<meta name="twitter:site" content="@inouetakumon">
+<meta name='twitter:card' content='summary_large_image' />
+<meta name='twitter:site' content='@inouetakumon' />
+<meta name='twitter:title' content='mdx-deckとcode-suferでスライドを作ろう！' />
+<meta name='twitter:description' content='mdx-deckとcode-suferはMDXをベースとしたグラフィカルなスライドが作れるライブラリです。' />
+<meta name='twitter:image' content='./images/mdx-deck-background.png' />
 <style>*{box-sizing:border-box}body{font-family:system-ui,sans-serif;margin:0}</style>
 <meta name='generator' content='mdx-deck'>
 <title>mdx-deck</title>
