--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width,initial-scale=1'>
 <meta name="twitter:site" content="@inouetakumon">
-<meta name='twitter:card' content='summary_large_image' />
-<meta name='twitter:site' content='@inouetakumon' />
-<meta name='twitter:title' content='mdx-deckとcode-suferでスライドを作ろう！' />
-<meta name='twitter:description' content='mdx-deckとcode-suferはMDXをベースとしたグラフィカルなスライドが作れるライブラリです。' />
-<meta name='twitter:image' content='./images/mdx-deck-background.png' />
+<meta name="twitter:creator" content="@inouetakumon">
+<meta name="twitter:card" content="summary_large_image">
+<meta name='twitter:title' content="MDX-DECKとCODE-SUFERでスライドを作ろう！">
+<meta name='twitter:image' content="https://takumon.github.io/mdx-deck-sample/images/mdx-deck-background.png">
+<meta name='twitter:description' content="MDX-DECKとCODE-SUFERはMDXをベースとしたグラフィカルなスライドが作れるライブラリの紹介です。">
+
+<meta property="og:title" content="MDX-DECKとCODE-SUFERでスライドを作ろう！">
+<meta property="og:description" content="MDX-DECKとCODE-SUFERはMDXをベースとしたグラフィカルなスライドが作れるライブラリの紹介です。">
+<meta property="og:image" content="https://takumon.github.io/mdx-deck-sample/images/mdx-deck-background.png">
+
 <style>*{box-sizing:border-box}body{font-family:system-ui,sans-serif;margin:0}</style>
 <meta name='generator' content='mdx-deck'>
 <title>mdx-deck</title>
