--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset='utf-8'>
+
+<link rel="canonical" href="https://takumon.github.io/mdx-deck-sample/">
 <meta name='viewport' content='width=device-width,initial-scale=1'>
 <meta name="twitter:site" content="@inouetakumon">
 <meta name="twitter:creator" content="@inouetakumon">
