--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name='twitter:title' content="MDX-DECKとCODE-SUFERでスライドを作ろう！">
 <meta name='twitter:image' content="https://takumon.github.io/mdx-deck-sample/images/mdx-deck-background.png">
-<meta name='twitter:description' content="MDX-DECKとCODE-SUFERはMDXをベースとしたグラフィカルなスライドが作れるライブラリの紹介です。">
+<meta name='twitter:description' content="MDX（Markdown + JSX）をベースとしたグラフィカルなスライドが作れるライブラリの紹介です。">
 
 <meta property="og:title" content="MDX-DECKとCODE-SUFERでスライドを作ろう！">
-<meta property="og:description" content="MDX-DECKとCODE-SUFERはMDXをベースとしたグラフィカルなスライドが作れるライブラリの紹介です。">
+<meta property="og:description" content="MDX（Markdown + JSX）をベースとしたグラフィカルなスライドが作れるライブラリの紹介です。">
 <meta property="og:image" content="https://takumon.github.io/mdx-deck-sample/images/mdx-deck-background.png">
 
 <style>*{box-sizing:border-box}body{font-family:system-ui,sans-serif;margin:0}</style>
